<resources>
    <string name="twitter_consumer_key" translatable="false">GP2WUOjFSiVswwUGBazy07O1x</string>
    <string name="twitter_consumer_secret" translatable="false">Ix399Tszhphn2ben5NFFaXxdEQK46RqRJwMb8BpabNlu7lYfVR</string>
    <string name="app_name">WroclawTripPlanner</string>
    <string name="explore_add_fab_description">Explore/Add Floating Action Button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_screen_prompt">WELCOME TO\nWROCLAW TRIP PLANNER</string>
    <string name="hint_enter_email">enter email</string>
    <string name="hint_enter_password">enter password</string>
    <string name="button_login">login</string>
    <string name="register_prompt">Don\'t have an account?</string>
    <string name="login_prompt">Already have an account?</string>
    <string name="sign_in_prompt">Sign in!</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in_with_twitter">SIGN IN WITH TWITTER</string>
    <string name="content_desc_twitter_logo">Twitter logo</string>
    <string name="register_screen_prompt">REGISTER WITH EMAIL</string>
    <string name="hint_enter_username">enter username</string>
    <string name="button_register">REGISTER</string>
    <string name="sign_up_prompt">Sign up!</string>
    <string name="content_desc_title_image">Photo of Wroclaw\'s center</string>
    <string name="password_str_dummy">Weak</string>
    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>
    <string name="password_instructions">Your password must be at least 8 characters long.\nIt must contain at least 1 number, 1 capital letter\nand 1 special character</string>
    <string name="twitter_name_taken_prompt">Sorry, your Twitter username\nis already taken :(\nPlease pick a new username:</string>
    <string name="retry">RETRY</string>
    <string name="login_screen_prompt">LOGIN WITH EMAIL</string>
    <string name="log_in">LOG IN</string>
    <string name="place_description_placeholder">DESCRIPTION PLACEHOLDER</string>
    <string name="created_by_placeholder">Created by: %s</string>
    <string name="name_placeholder">NAME PLACEHOLDER</string>
    <string name="settings">Settings</string>
    <string name="log_out">LOG OUT</string>
    <string name="favourites">Favourites</string>
    <string name="your_places">Places &amp; Trips</string>
    <string name="top_trips">Top Trips</string>
    <string name="find_new_places">Find new places!</string>
    <string name="create_new_place_prompt">Create a new Place:</string>
    <string name="private_switch">Private</string>
    <string name="place_name_hint">place name</string>
    <string name="place_description_hint">place description</string>
    <string name="add">ADD</string>
    <string name="open_tags">more +</string>
    <string name="categories_prompt">Categories:</string>
    <string name="culture_category_prompt">Culture:</string>
    <string name="food_and_drinks_prompt">Food and Drinks:</string>
    <string name="leisure_prompt">Leisure:</string>
    <string name="services_prompt">Services:</string>
    <string name="category_placeholder">category: %s</string>
    <string name="tags_prompt">Tags:</string>
    <string name="add_a_tag">add a tag +</string>
    <string name="add_place_to_favourites">Add place to favourites</string>
    <string name="change_username_prompt">CHANGE USERNAME</string>
    <string name="change_username_hint">change username</string>
    <string name="change">CHANGE</string>
    <string name="like_counter_placeholder">0</string>
    <string name="add_place_to_a_trip">ADD PLACE TO A TRIP</string>
    <string name="fav_list_prompt">YOUR FAVOURITE %s</string>
    <string name="switch_to_fav_places_fab">switch to fav places fab</string>
    <string name="switch_to_user_places_fab">switch to user places fab</string>
    <string name="users_list_prompt">YOUR %s</string>
    <string name="edit_place">edit place</string>
    <string name="place_likes_prompt">likes: %s</string>
    <string name="edit_prompt">Edit %s</string>
    <string name="save">SAVE</string>
    <string name="add_to_a_new_trip">Add to a new Trip</string>
    <string name="add_to_an_existing_trip">Add to an existing Trip</string>
    <string name="create_new_trip_prompt">Create a new Trip</string>
    <string name="trip_name_hint">trip name</string>
    <string name="trip_description_hint">trip description</string>
    <string name="choose_a_trip">Choose a Trip</string>
    <string name="add_to_trip_content_description">add to trip content description</string>
    <string name="close_trip_picker">close trip picker</string>
    <string name="trip_list_prompt">COMMUNITY TRIPS</string>
    <string name="expand_trip_description">expand trip description</string>
    <string name="description_prompt">Description:</string>
    <string name="trip_places_prompt">Places:</string>
    <string name="content_desc_the_way">show the way of the trip</string>
    <string name="content_desc_show_trip_s_place_on_the_map">show trip\'s place on the map</string>
    <string name="remove_place_from_trip">remove place from the trip</string>
    <string name="remove_the_place">remove the place</string>
    <string name="remove_the_trip">remove the trip</string>
    <string name="tag_falafel">falafel</string>
    <string name="tag_train_station">train station</string>
    <string name="hint_repeat_password">repeat password</string>
    <string name="navigate_to_the_place">Navigate to the place</string>


</resources>