<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.TripDetailsFragment"
    android:paddingHorizontal="30dp"
    android:layout_marginBottom="40dp">

    <TextView
        android:id="@+id/text_view_trip_name_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="6dp"
        android:text="@string/name_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_view_trip_author_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        android:text="@string/created_by_placeholder"
        app:layout_constraintTop_toBottomOf="@id/text_view_trip_name_details"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_trip_description_prompt_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/description_prompt"
        app:layout_constraintTop_toBottomOf="@id/text_view_trip_author_details"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_trip_description_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="180dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:text="@string/place_description_placeholder"
        app:layout_constraintTop_toBottomOf="@id/text_view_trip_description_prompt_details" />

    <TextView
        android:id="@+id/text_view_trip_places_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_places_prompt"
        android:textSize="18sp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_trip_description_details"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_trip_places"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/recycler_view_item_trip_place"
        app:layout_constraintTop_toBottomOf="@id/text_view_trip_places_prompt"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_show_the_way"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_the_way"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/content_desc_the_way" />

</androidx.constraintlayout.widget.ConstraintLayout>