<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.login.WelcomeFragment">

    <FrameLayout
        android:id="@+id/title_screen_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:src="@drawable/img_wroclaw_photo"
            android:contentDescription="@string/content_desc_title_image" />

        <View
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:background="@drawable/fade_gradient_bottom"/>

    </FrameLayout>

    <TextView
        android:id="@+id/text_view_title_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/welcome_screen_prompt"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_screen_image"
        />


    <LinearLayout
        android:id="@+id/linear_layout_login_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/text_view_login_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/login_prompt"/>

        <TextView
            android:id="@+id/text_view_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/sign_in_prompt"
            android:textColor="@color/md_theme_dark_tertiary"
            />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_twitter_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginHorizontal="35dp"
        android:text="@string/sign_in_with_twitter"
        android:textColor="@color/white"
        android:backgroundTint="@color/fui_bgTwitter"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_login_prompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:layout_marginStart="17dp"
        android:src="@drawable/fui_ic_twitter_bird_white_24dp"
        app:layout_constraintStart_toStartOf="@id/button_twitter_sign_in"
        app:layout_constraintTop_toTopOf="@id/button_twitter_sign_in"
        app:layout_constraintBottom_toBottomOf="@id/button_twitter_sign_in"
        android:contentDescription="@string/content_desc_twitter_logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_email_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/sign_up"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/button_twitter_sign_in"
        app:layout_constraintStart_toStartOf="@id/button_twitter_sign_in"
        app:layout_constraintEnd_toEndOf="@id/button_twitter_sign_in"/>


</androidx.constraintlayout.widget.ConstraintLayout>